--- a/_sass/_bootstrap_overrides.scss
+++ b/_sass/_bootstrap_overrides.scss
@@ -1,3 +1,8 @@
+$code-color:                  #333 !default;
+$code-bg:                     #eee !default;
+
+$font-size-base: 16px !default;
+
 @import "bootstrap";
 
 .page-header {
@@ -12,9 +17,11 @@
   float: left !important;
 }
 
-@media (max-width: $screen-xs-max) {
-  .jumbotron {
-    padding-left: 0;
-    padding-right: 0;
-  }
+code, pre {
+  border-radius: 0;
+}
+
+pre {
+  font-size: (($font-size-base - 2));
+  padding: (($line-height-computed - 1) / 3);
 }
