--- a/_includes/post/author.html
+++ b/_includes/post/author.html
@@ -1,8 +1,10 @@
-{% if post.author %}
-  {% assign author = post.author %}
-{% elsif page.author %}
-  {% assign author = page.author %}
-{% else %}
-  {% assign author = site.author %}
-{% endif %}
-{% if author %}<i class="fa fa-user"></i> <span class="byline author vcard">Posted by <span class="fn">{{ author }}</span></span>{% endif %}
+{% capture author %}
+  {% if post.author %}
+    {{ post.author }}
+  {% elsif page.author %}
+    {{ page.author }}
+  {% else %}
+    {{ site.author }}
+  {% endif %}
+{% endcapture %}
+{% if author %}<i class="fa fa-user"></i> <span class="byline author vcard"><span class="fn">{{ author }}</span></span>{% endif %}
