--- a/_includes/post/categories.html
+++ b/_includes/post/categories.html
@@ -1,5 +1,4 @@
-{% capture category %}{% if post %}{{ post.categories | category_links | size }}{% else %}{{ page.categories | category_links | size }}{% endif %}{% endcapture %}
-{% unless category == '0' %}
+<!--{% unless category == '0' %}-->
 <i class="fa fa-tags"></i>&nbsp;
 <span class="categories">
   {% if post %}
@@ -8,4 +7,4 @@
     {{ page.categories | category_links }}
   {% endif %}
 </span>
-{% endunless %}
+<!--{% endunless %}-->
