--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
     <div class="container">
       <main>
         <div class="row">
-          <div class="col-md-8">
+          <div class="main-content col-md-8">
             {{ content }}
           </div>
-          <div class="col-md-4">
+          <div class="asides col-md-4">
             {% include asides/resent_posts.html %}
             {% include asides/github.html %}
             {% include asides/legal.html %}
