--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,10 @@ layout: default
     <h1>{{ page.title }}</h1>
   </header>
   <article class="post-content">
-    {{ content }}
+    <div class="lead">
+      {{ content | summarize }}
+    </div>
+    {{ content | not_summary }}
   </article>
   {% include post/footer.html %}
 </div>
