--- a/_sass/_bootstrap_overrides.scss
+++ b/_sass/_bootstrap_overrides.scss
@@ -7,6 +7,8 @@ $font-size-base: 16px !default;
 
 .page-header {
   margin-top: 0 !important;
+  border-bottom: 0 !important;
+  margin-bottom: 0.5em;
 }
 
 @mixin pull-right {
@@ -24,4 +26,8 @@ code, pre {
 pre {
   font-size: (($font-size-base - 2));
   padding: (($line-height-computed - 1) / 3);
+}
+
+.panel, .label, .badge, .btn {
+  border-radius: 0;
 }
