--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -3,15 +3,24 @@ layout: page
 footer: false
 ---
 
-<div id="blog-archives" class="category">
+<table id="blog-archives" class="table category">
+  {% assign year = -1 %}
   {% for post in site.categories[page.category] %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% unless year == this_year %}
+      {% if year != -1 %}
+            </div>
+          </td>
+        </tr>
+      {% endif %}
       {% assign year = this_year %}
-      <h2>{{ year }}</h2>
+      <tr>
+        <td class="year">{{ year }}</td>
+        <td>
+          <div class="list-group">
     {% endunless %}
-    <article class="page-header">
+    <div class="list-group-item">
       {% include archive_post.html %}
-    </article>
+    </div>
   {% endfor %}
-</div>
+</table>
